--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "web": "webpack-dev-server -d --config web/webpack.config.ts --inline --hot --colors",
+    "web": "webpack-dev-server -d --config web/webpack.config.js --inline --hot --colors",
     "test": "jest"
   },
   "dependencies": {
     "@types/babel-core": "^6.25.3",
-    "@types/react": "^16.0.26",
+    "@types/react": "^15.4.2",
     "@types/react-native": "^0.50.7",
+    "@types/react-native-elements": "^0.18.0",
     "@types/react-redux": "^5.0.14",
     "@types/redux": "^3.6.0",
     "@types/webpack": "^3.8.1",
@@ -21,16 +22,17 @@
     "babel-preset-react-native": "4.0.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
-    "native-base": "^2.3.3",
-    "react": "^16.0.0",
-    "react-dom": "^16.2.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-native": "0.50.4",
-    "react-native-web": "^0.1.16",
+    "react-native-vector-icons": "^4.4.2",
+    "react-native-web": "0.0.130",
     "react-redux": "^5.0.6",
     "react-test-renderer": "16.0.0",
     "redux": "^3.7.2",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5"
   },
