--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
-    "module": "commonjs",
-    "target": "es5",
+    "moduleResolution": "node",
+    "module": "es6",
+    "target": "es6",
     "jsx": "react",
     "lib": ["es2017", "es7", "dom"],
     "types": [
