stuggle to run ios sim over

--- a/ios/peerassets-wallet.xcodeproj/xcshareddata/xcschemes/peerassets-wallet-tvOS.xcscheme
+++ b/ios/peerassets-wallet.xcodeproj/xcshareddata/xcschemes/peerassets-wallet-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "editor-tvOS.app"
-               BlueprintName = "editor-tvOS"
-               ReferencedContainer = "container:editor.xcodeproj">
+               BuildableName = "peerassets-wallet-tvOS.app"
+               BlueprintName = "peerassets-wallet-tvOS"
+               ReferencedContainer = "container:peerassets-wallet.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "editor-tvOSTests.xctest"
-               BlueprintName = "editor-tvOSTests"
-               ReferencedContainer = "container:editor.xcodeproj">
+               BuildableName = "peerassets-wallet-tvOSTests.xctest"
+               BlueprintName = "peerassets-wallet-tvOSTests"
+               ReferencedContainer = "container:peerassets-wallet.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "editor-tvOSTests.xctest"
-               BlueprintName = "editor-tvOSTests"
-               ReferencedContainer = "container:editor.xcodeproj">
+               BuildableName = "peerassets-wallet-tvOSTests.xctest"
+               BlueprintName = "peerassets-wallet-tvOSTests"
+               ReferencedContainer = "container:peerassets-wallet.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "editor-tvOS.app"
-            BlueprintName = "editor-tvOS"
-            ReferencedContainer = "container:editor.xcodeproj">
+            BuildableName = "peerassets-wallet-tvOS.app"
+            BlueprintName = "peerassets-wallet-tvOS"
+            ReferencedContainer = "container:peerassets-wallet.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "editor-tvOS.app"
-            BlueprintName = "editor-tvOS"
-            ReferencedContainer = "container:editor.xcodeproj">
+            BuildableName = "peerassets-wallet-tvOS.app"
+            BlueprintName = "peerassets-wallet-tvOS"
+            ReferencedContainer = "container:peerassets-wallet.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "editor-tvOS.app"
-            BlueprintName = "editor-tvOS"
-            ReferencedContainer = "container:editor.xcodeproj">
+            BuildableName = "peerassets-wallet-tvOS.app"
+            BlueprintName = "peerassets-wallet-tvOS"
+            ReferencedContainer = "container:peerassets-wallet.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
