--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "web": "webpack-dev-server -d --config web/webpack.config.js --inline --hot --colors",
+    "native": "tsc --pretty --sourceMap --target es2015 --module commonjs",
     "build": "webpack -d --config web/webpack.config.js --colors",
     "test": "jest"
   },
@@ -23,9 +24,9 @@
     "babel-preset-react-native": "4.0.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
-    "react": "^15.4.2",
+    "react": "16.0.0",
     "react-dom": "^15.4.2",
-    "react-native": "0.50.4",
+    "react-native": "0.51.0",
     "react-native-vector-icons": "^4.4.2",
     "react-native-web": "0.0.130",
     "react-redux": "^5.0.6",
