--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "web": "webpack-dev-server -d --config web/webpack.config.js --inline --hot --colors",
-    "native": "tsc --pretty --sourceMap --target es2015 --module commonjs",
+    "native": "tsc  --watch --pretty --sourceMap --target es2015 --module commonjs",
     "build": "webpack -d --config web/webpack.config.js --colors",
     "test": "jest"
   },
@@ -24,13 +24,15 @@
     "babel-preset-react-native": "4.0.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
-    "react": "16.0.0",
+    "prop-types": "^15.6.0",
+    "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-native": "0.51.0",
+    "react-native": "^0.41.2",
+    "react-native-elements": "git+ssh://git@github.com/Gregor1971/react-native-elements.git",
     "react-native-vector-icons": "^4.4.2",
     "react-native-web": "0.0.130",
     "react-redux": "^5.0.6",
-    "react-test-renderer": "16.0.0",
+    "react-test-renderer": "^15.4.2",
     "redux": "^3.7.2",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
