--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@types/babel-core": "^6.25.3",
+    "@types/history": "^4.6.2",
     "@types/react": "^15.4.2",
     "@types/react-native": "^0.50.7",
     "@types/react-native-elements": "^0.18.0",
     "@types/react-redux": "^5.0.14",
+    "@types/react-router": "^4.0.19",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/react-router-native": "^4.0.2",
+    "@types/react-router-redux": "^5.0.10",
     "@types/redux": "^3.6.0",
     "@types/webpack": "^3.8.1",
     "@types/webpack-env": "^1.13.2",
@@ -22,6 +27,9 @@
     "babel-core": "^6.26.0",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "bitcore-lib": "^0.15.0",
+    "file-loader": "^1.1.5",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
     "prop-types": "^15.6.0",
@@ -29,11 +37,17 @@
     "react-dom": "^15.4.2",
     "react-native": "^0.41.2",
     "react-native-elements": "git+ssh://git@github.com/Gregor1971/react-native-elements.git",
+    "react-native-extended-stylesheet": "^0.8.0",
     "react-native-vector-icons": "^4.4.2",
     "react-native-web": "0.0.130",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-native": "^4.2.0",
+    "react-router-redux": "^5.0.0-alpha.8",
     "react-test-renderer": "^15.4.2",
     "redux": "^3.7.2",
+    "redux-persist": "^5.4.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "url-loader": "^0.6.2",
