--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
+    "native-base": "^2.3.4",
     "prop-types": "^15.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
