nav stuff, hot reloading

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "web": "webpack-dev-server -d --config web/webpack.config.js --inline --hot --colors",
+    "web": "webpack-dev-server -d --config web/webpack.config.js --inline --colors",
     "native": "tsc  --watch --pretty --sourceMap --target es2015 --module commonjs",
     "build": "webpack -d --config web/webpack.config.js --colors",
     "test": "jest"
@@ -13,8 +13,10 @@
     "@types/babel-core": "^6.25.3",
     "@types/history": "^4.6.2",
     "@types/react": "^15.4.2",
+    "@types/react-hot-loader": "^3.0.5",
     "@types/react-native": "^0.50.7",
     "@types/react-native-elements": "^0.18.0",
+    "@types/react-native-tab-view": "0.0.1",
     "@types/react-redux": "^5.0.14",
     "@types/react-router": "^4.0.19",
     "@types/react-router-dom": "^4.2.3",
@@ -35,9 +37,11 @@
     "prop-types": "^15.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "^3.0.0-beta.7",
     "react-native": "^0.41.2",
     "react-native-elements": "git+ssh://git@github.com/Gregor1971/react-native-elements.git",
     "react-native-extended-stylesheet": "^0.8.0",
+    "react-native-tab-view": "0.0.73",
     "react-native-vector-icons": "^4.4.2",
     "react-native-web": "0.0.130",
     "react-redux": "^5.0.6",
