trying out rn ui kitten, looks promising

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/react-hot-loader": "^3.0.5",
     "@types/react-native": "^0.50.7",
     "@types/react-native-elements": "^0.18.0",
-    "@types/react-native-tab-view": "0.0.1",
     "@types/react-redux": "^5.0.14",
     "@types/react-router": "^4.0.19",
     "@types/react-router-dom": "^4.2.3",
@@ -41,7 +40,7 @@
     "react-native": "^0.41.2",
     "react-native-elements": "git+ssh://git@github.com/Gregor1971/react-native-elements.git",
     "react-native-extended-stylesheet": "^0.8.0",
-    "react-native-tab-view": "0.0.73",
+    "react-native-ui-kitten": "^2.0.1",
     "react-native-vector-icons": "^4.4.2",
     "react-native-web": "0.0.130",
     "react-redux": "^5.0.6",
