--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
     "prop-types": "^15.6.0",
-    "react": "^15.4.2",
+    "react": "16.0.0",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.7",
-    "react-native": "^0.41.2",
+    "react-native": "0.51.0",
     "react-native-elements": "git+ssh://git@github.com/Gregor1971/react-native-elements.git",
     "react-native-extended-stylesheet": "^0.8.0",
     "react-native-ui-kitten": "^2.0.1",
     "react-native-vector-icons": "^4.4.2",
-    "react-native-web": "0.0.130",
+    "react-native-web": "^0.1.16",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
