replacing react-native-elements

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@types/babel-core": "^6.25.3",
     "@types/history": "^4.6.2",
-    "@types/react": "^15.4.2",
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^16.0.0",
     "@types/react-hot-loader": "^3.0.5",
     "@types/react-native": "^0.50.7",
     "@types/react-native-elements": "^0.18.0",
@@ -35,10 +36,9 @@
     "jest": "21.2.1",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
-    "react-dom": "^15.4.2",
+    "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-native": "0.51.0",
-    "react-native-elements": "git+ssh://git@github.com/Gregor1971/react-native-elements.git",
     "react-native-extended-stylesheet": "^0.8.0",
     "react-native-ui-kitten": "^2.0.1",
     "react-native-vector-icons": "^4.4.2",
@@ -52,7 +52,6 @@
     "redux": "^3.7.2",
     "redux-persist": "^5.4.0",
     "redux-saga": "^0.16.0",
-    "redux-saga-routines": "^2.2.2",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "url-loader": "^0.6.2",
