vector icon config

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-hot-loader": "^3.0.5",
     "@types/react-native": "^0.50.7",
     "@types/react-native-elements": "^0.18.0",
+    "@types/react-native-vector-icons": "^4.4.2",
     "@types/react-redux": "^5.0.14",
     "@types/react-router": "^4.0.19",
     "@types/react-router-dom": "^4.2.3",
@@ -43,6 +44,7 @@
     "react-native-ui-kitten": "^2.0.1",
     "react-native-vector-icons": "^4.4.2",
     "react-native-web": "^0.1.16",
+    "react-native-web-lists": "^0.1.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
