it's getting better all the time

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/babel-core": "^6.25.3",
     "@types/history": "^4.6.2",
+    "@types/moment": "^2.13.0",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^16.0.0",
     "@types/react-hot-loader": "^3.0.5",
@@ -35,6 +36,7 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
+    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-dom": "^16.0.0",
@@ -50,7 +52,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-native": "^4.2.0",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-test-renderer": "^15.4.2",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-persist": "^5.4.0",
     "redux-saga": "^0.16.0",
