--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
     "moment": "^2.20.1",
+    "native-base": "^2.3.5",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-native": "0.51.0",
     "react-native-extended-stylesheet": "^0.8.0",
-    "react-native-ui-kitten": "^2.0.1",
     "react-native-vector-icons": "^4.4.2",
-    "react-native-web": "^0.1.16",
+    "react-native-web": "^0.2.2",
     "react-native-web-lists": "^0.1.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
