--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.20.1",
     "native-base": "^2.3.5",
     "prop-types": "^15.6.0",
+    "ramda": "^0.25.0",
     "react": "16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
@@ -66,6 +67,7 @@
     "preset": "react-native"
   },
   "devDependencies": {
+    "@types/ramda": "types/npm-ramda#dist",
     "babel-plugin-transform-regenerator": "^6.26.0"
   }
 }
