--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "typescript-fsa": "^2.5.0",
+    "typescript-fsa-redux-saga": "^1.0.3",
     "url-loader": "^0.6.2",
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5"
