--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-persist": "^5.4.0",
-    "redux-saga": "^0.16.0",
+    "redux-saga": "1.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "typescript-fsa": "^2.5.0",
