--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/babel-core": "^6.25.3",
+    "@types/deepmerge": "^1.3.3",
     "@types/history": "^4.6.2",
     "@types/moment": "^2.13.0",
     "@types/react": "^16.0.0",
@@ -32,6 +33,7 @@
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
     "bitcore-lib": "^0.15.0",
+    "deepmerge": "^2.0.1",
     "file-loader": "^1.1.5",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
