--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-native": "0.51.0",
-    "react-native-extended-stylesheet": "^0.8.0",
     "react-native-vector-icons": "^4.4.2",
     "react-native-web": "^0.2.2",
     "react-native-web-lists": "^0.1.0",
@@ -62,7 +61,7 @@
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-persist": "^5.4.0",
-    "redux-saga": "^1.0.0",
+    "redux-saga": "1.0.0-beta.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "typescript-fsa": "^2.5.0",
