--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "babel-core": "^6.26.0",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
-    "bitcore-lib": "^0.15.0",
+    "bitcore-lib": "0.13.14",
     "deepmerge": "^2.0.1",
     "file-loader": "^1.1.5",
     "google-protobuf": "^3.5.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
+    "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "native-base": "^2.3.5",
     "prop-types": "^15.6.0",
