--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "redux": "^3.7.2",
     "redux-persist": "^5.4.0",
     "redux-saga": "1.0.0-beta.0",
+    "scrypt-async": "^2.0.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "typescript-fsa": "^2.5.0",
