--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-native": "0.51.0",
+    "react-native-simple-modal": "^7.0.0",
     "react-native-vector-icons": "^4.4.2",
     "react-native-web": "^0.2.2",
     "react-native-web-lists": "^0.1.0",
