--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-router-native": "^4.0.2",
     "@types/react-router-redux": "^5.0.10",
     "@types/redux": "^3.6.0",
+    "@types/text-encoding": "^0.0.32",
     "@types/webpack": "^3.8.1",
     "@types/webpack-env": "^1.13.2",
     "awesome-typescript-loader": "^3.1.3",
@@ -65,6 +66,7 @@
     "redux-persist": "^5.4.0",
     "redux-saga": "1.0.0-beta.0",
     "scrypt-async": "^2.0.0",
+    "text-encoding": "^0.6.4",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "typescript-fsa": "^2.5.0",
