--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "react-router-redux": "^5.0.0-alpha.8",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
-    "redux-persist": "^5.4.0",
+    "redux-persist": "5.6.12",
     "redux-saga": "1.0.0-beta.0",
     "scrypt-async": "^2.0.0",
     "ts-node": "^3.3.0",
