--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
     "bitcore-lib": "0.13.14",
+    "color": "^3.0.0",
     "deepmerge": "^2.0.1",
     "file-loader": "^1.1.5",
     "google-protobuf": "^3.5.0",
@@ -44,7 +45,7 @@
     "jest": "21.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
-    "native-base": "https://github.com/micimize/native-base#145d603fbb7e31339c2faaad46921c8a4fc79bf4",
+    "native-base": "git://github.com/micimize/NativeBase.git#145d603fbb7e31339c2faaad46921c8a4fc79bf4",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "16.0.0",
