--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "jest": "21.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
-    "native-base": "git://github.com/micimize/NativeBase.git#145d603fbb7e31339c2faaad46921c8a4fc79bf4",
+    "native-base": "git://github.com/micimize/NativeBase.git#bbaf404e3e5b89392ed46cac9725d43e46cd35d5",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "16.0.0",
@@ -54,7 +54,7 @@
     "react-native": "0.51.0",
     "react-native-modal": "^5.0.0",
     "react-native-vector-icons": "^4.4.2",
-    "react-native-web": "^0.2.2",
+    "react-native-web": "0.5.1",
     "react-native-web-lists": "^0.1.0",
     "react-redux": "^5.0.6",
     "react-responsive-modal": "^2.0.0",
