--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-native": "0.51.0",
     "react-native-modal": "^5.0.0",
     "react-native-vector-icons": "^4.4.2",
-    "react-native-web": "0.5.1",
+    "react-native-web": "^0.2.2",
     "react-native-web-lists": "^0.1.0",
     "react-redux": "^5.0.6",
     "react-responsive-modal": "^2.0.0",
