--- a/package.json
+++ b/package.json
@@ -13,23 +13,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/babel-core": "^6.25.3",
-    "@types/deepmerge": "^1.3.3",
-    "@types/history": "^4.6.2",
-    "@types/moment": "^2.13.0",
-    "@types/react": "^16.0.0",
-    "@types/react-dom": "^16.0.0",
-    "@types/react-hot-loader": "^3.0.5",
-    "@types/react-native": "^0.50.7",
-    "@types/react-native-vector-icons": "^4.4.2",
-    "@types/react-redux": "^5.0.14",
-    "@types/react-router": "^4.0.19",
-    "@types/react-router-dom": "^4.2.3",
-    "@types/react-router-native": "^4.0.2",
-    "@types/react-router-redux": "^5.0.10",
-    "@types/redux": "^3.6.0",
-    "@types/webpack": "^3.8.1",
-    "@types/webpack-env": "^1.13.2",
     "awesome-typescript-loader": "^3.1.3",
     "babel-core": "^6.26.0",
     "babel-jest": "21.2.0",
@@ -44,7 +27,7 @@
     "jest": "21.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
-    "native-base": "git://github.com/micimize/NativeBase.git#bbaf404e3e5b89392ed46cac9725d43e46cd35d5",
+    "native-base": "git://github.com/micimize/NativeBase.git#bab6882be240ef906c667b4486a9433386cfa916",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "16.0.0",
@@ -65,6 +48,7 @@
     "redux": "^3.7.2",
     "redux-persist": "5.6.12",
     "redux-saga": "1.0.0-beta.0",
+    "regenerator-runtime": "^0.11.1",
     "scrypt-async": "^2.0.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
@@ -78,7 +62,23 @@
     "preset": "react-native"
   },
   "devDependencies": {
+    "@types/babel-core": "^6.25.3",
+    "@types/deepmerge": "^1.3.3",
+    "@types/history": "^4.6.2",
     "@types/ramda": "types/npm-ramda#dist",
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^16.0.0",
+    "@types/react-hot-loader": "^3.0.5",
+    "@types/react-native": "^0.50.7",
+    "@types/react-native-vector-icons": "^4.4.2",
+    "@types/react-redux": "^5.0.14",
+    "@types/react-router": "^4.0.19",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/react-router-native": "^4.0.2",
+    "@types/react-router-redux": "^5.0.10",
+    "@types/redux": "^3.6.0",
+    "@types/webpack": "^3.8.1",
+    "@types/webpack-env": "^1.13.2",
     "babel-plugin-transform-regenerator": "^6.26.0"
   }
 }
