--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ramda": "^0.25.0",
     "react": "16.0.0",
     "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.0.0-beta.7",
+    "react-hot-loader": "^4.0.0",
     "react-native": "0.51.0",
     "react-native-modal": "^5.0.0",
     "react-native-vector-icons": "^4.4.2",
@@ -61,6 +61,7 @@
   "jest": {
     "preset": "react-native"
   },
+  "license": "BSD-3",
   "devDependencies": {
     "@types/babel-core": "^6.25.3",
     "@types/deepmerge": "^1.3.3",
