--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "awesome-typescript-loader": "^3.1.3",
     "babel-core": "^6.26.0",
     "babel-jest": "21.2.0",
+    "babel-plugin-react-native-web": "^0.5.3",
     "babel-preset-react-native": "4.0.0",
     "bitcore-lib": "0.13.14",
     "color": "^3.0.0",
@@ -37,7 +38,7 @@
     "react-native": "0.51.0",
     "react-native-modal": "^5.0.0",
     "react-native-vector-icons": "^4.4.2",
-    "react-native-web": "^0.2.2",
+    "react-native-web": "^0.5.3",
     "react-native-web-lists": "^0.1.0",
     "react-redux": "^5.0.6",
     "react-responsive-modal": "^2.0.0",
@@ -51,6 +52,7 @@
     "redux-saga": "1.0.0-beta.0",
     "regenerator-runtime": "^0.11.1",
     "scrypt-async": "^2.0.0",
+    "source-map-loader": "^0.2.3",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "typescript-fsa": "^2.5.0",
