--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "awesome-typescript-loader": "^3.1.3",
     "babel-core": "^6.26.0",
     "babel-jest": "21.2.0",
+    "babel-plugin-react-native-nodeify-hack": "^1.0.1",
     "babel-plugin-react-native-web": "^0.5.3",
+    "babel-plugin-rewrite-require": "^1.14.5",
+    "babel-plugin-transform-define": "^1.3.0",
     "babel-preset-react-native": "4.0.0",
     "bitcore-lib": "0.13.14",
+    "brorand": "^1.1.0",
+    "buffer": "^5.1.0",
     "color": "^3.0.0",
     "deepmerge": "^2.0.1",
     "file-loader": "^1.1.5",
@@ -29,13 +34,16 @@
     "moment": "^2.20.1",
     "native-base": "git://github.com/micimize/NativeBase.git#bab6882be240ef906c667b4486a9433386cfa916",
     "number-precision": "^1.2.0",
+    "process": "^0.11.10",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^4.0.0",
-    "react-native": "0.51.0",
+    "react-native": "0.55.2",
+    "react-native-crypto": "^2.1.2",
     "react-native-modal": "^5.0.0",
+    "react-native-randombytes": "^3.0.0",
     "react-native-vector-icons": "^4.4.2",
     "react-native-web": "^0.5.3",
     "react-native-web-lists": "^0.1.0",
@@ -52,12 +60,14 @@
     "regenerator-runtime": "^0.11.1",
     "scrypt-async": "^2.0.0",
     "source-map-loader": "^0.2.3",
+    "stream-browserify": "^2.0.1",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "typescript-fsa": "^2.5.0",
     "typescript-fsa-redux-saga": "^1.0.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^0.6.2",
+    "vm-browserify": "^1.0.0",
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5"
   },
