deep in the stack trace slagheap

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": ["react-native"],
+  "sourceMaps": true,
   "plugins": [
     "babel-plugin-react-native-nodeify-hack",
     ["babel-plugin-rewrite-require", {
