--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "native": "tsc --watch --pretty --sourceMap --target es2015 --module commonjs",
+    "native": "tsc --watch --pretty --sourceMap",
     "web:start": "webpack-dev-server -d --config web/config/webpack.dev.js --colors",
     "web:build": "webpack --config web/config/webpack.prod.js --colors",
     "web:deploy": "bash web/deploy.sh",
@@ -19,8 +19,8 @@
     "babel-plugin-react-native-web": "^0.5.3",
     "babel-plugin-rewrite-require": "^1.14.5",
     "babel-plugin-transform-define": "^1.3.0",
-    "babel-preset-react-native": "4.0.0",
-    "bitcore-lib": "0.13.14",
+    "babel-preset-react-native": "^4.0.0",
+    "bitcore-lib": "^0.15.0",
     "brorand": "^1.1.0",
     "buffer": "^5.1.0",
     "color": "^3.0.0",
@@ -93,6 +93,9 @@
     "@types/redux": "^3.6.0",
     "@types/webpack": "^3.8.1",
     "@types/webpack-env": "^1.13.2",
-    "babel-plugin-transform-regenerator": "^6.26.0"
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
   }
 }
