--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "scrypt-async": "^2.0.0",
     "source-map-loader": "^0.2.3",
     "stream-browserify": "^2.0.1",
+    "text-encoding": "^0.6.4",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2",
     "typescript-fsa": "^2.5.0",
