--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "babel-plugin-rewrite-require": "^1.14.5",
     "babel-plugin-transform-define": "^1.3.0",
     "babel-preset-react-native": "^4.0.0",
-    "bitcore-lib": "micimize/bitcore-lib",
+    "bitcore-lib": "git://github.com/micimize/bitcore-lib.git#3046ec24dee23c8766ee486ac1562a760f207a4e",
     "brorand": "^1.1.0",
     "buffer": "^5.1.0",
     "color": "^3.0.0",
