--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "brorand": "^1.1.0",
     "buffer": "^5.1.0",
     "color": "^3.0.0",
+    "connected-react-router": "^4.3.0",
     "deepmerge": "^2.0.1",
     "file-loader": "^1.1.5",
     "google-protobuf": "^3.5.0",
@@ -51,7 +52,6 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-native": "^4.2.0",
-    "react-router-redux": "^5.0.0-alpha.8",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-persist": "5.6.12",
